--- a/frontend/src/components/chat.module.css
+++ b/frontend/src/components/chat.module.css
@@ -15,7 +15,7 @@
 	border: none;
 	border-radius: 0.4rem;
 	margin: 0.5rem;
-	width: fit-content;
+	min-width: fit-content;
 	padding: 0.4rem;
 	cursor: pointer;
 	user-select: none;
@@ -51,8 +51,9 @@
 }
 .chat-actions {
 	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+	justify-content: flex-start;
+	flex-wrap: nowrap;
+	overflow: auto;
 	height: 100%;
 	width: 25%;
 }
@@ -184,8 +185,9 @@
 .message-self {
 	width: fit-content;
 	max-width: 50%;
+	min-width: 2.4rem;
 	margin: 1rem 1rem 1rem auto;
-	padding: 0.4rem;
+	padding: 0.4rem 1.6rem;
 	overflow-wrap: break-word;
 	border-radius: 0.8rem;
 	color: white;
@@ -195,8 +197,9 @@
 .message-other {
 	width: fit-content;
 	max-width: 50%;
+	min-width: 4.8rem;
 	margin: 1rem auto 1rem 1rem;
-	padding: 0.4rem;
+	padding: 0.4rem 1.6rem;
 	border-radius: 0.8rem;
 	color: white;
 	background-color: #2b4865;
